After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 788778 - Fix since version for ref() and unref() in GstFlowCombiner
Fix since version for ref() and unref() in GstFlowCombiner
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other All
: Normal normal
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-10-10 14:26 UTC by fengalin
Modified: 2017-10-10 15:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] libs/gst/base/gstflowcombiner: fix version for ref and unref (1.37 KB, patch)
2017-10-10 14:26 UTC, fengalin
none Details | Review
Replaces previous patch (1.55 KB, patch)
2017-10-10 15:33 UTC, fengalin
committed Details | Review

Description fengalin 2017-10-10 14:26:33 UTC
Created attachment 361249 [details] [review]
[PATCH] libs/gst/base/gstflowcombiner: fix version for ref and unref

See the attached patch:

The functions `gst_flow_combiner_ref` and `gst_flow_combiner_unref` were introduced in version 1.12.1. They are currently tied to the `GstFlowCombiner` version 1.4 and appear as such in Gir files. This causes build failures for gstreamer-rs binding when the gstreamer version installed on the local host is anterior to 1.12.1.
Comment 1 Sebastian Dröge (slomo) 2017-10-10 15:12:41 UTC
Comment on attachment 361249 [details] [review]
[PATCH] libs/gst/base/gstflowcombiner: fix version for ref and unref

Thanks! Please put the documentation into the .c file though, we don't put documentation into headers.
Comment 2 fengalin 2017-10-10 15:33:52 UTC
Created attachment 361253 [details] [review]
Replaces previous patch

Sorry about that...
Comment 3 Sebastian Dröge (slomo) 2017-10-10 15:40:12 UTC
commit 6617b01af92b72f5ee348be111bf3a2bb2288ea1 (HEAD -> master)
Author: fengalin <fengalin@free.fr>
Date:   Tue Oct 10 15:53:38 2017 +0200

    flowcombiner: Fix version for ref and unref functions
    
    The functions were introduced in version 1.12.1, GstFlowCombiner was
    introduced in 1.4.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=788778